# ATLAS-Thesis

./: README.md
tracknnanalysis-master/TrackNNAnalysis/: CMakeLists.txt
tracknnanalysis-master/TrackNNAnalysis/Root/: FakeManager.cxx  HitGeoPlotter.cxx  HitsManager.cxx  MLTrackExtrapolatorReco.cxx  OutputManager.cxx  SeedManager.cxx  TrackGeoPlotter.cxx  TrackManager.cxx  TrackingMetricsTool.cxx
tracknnanalysis-master/TrackNNAnalysis/Root/atlasstyle/: AtlasLabels.C  AtlasStyle.C  AtlasUtils.C
tracknnanalysis-master/TrackNNAnalysis/TrackNNAnalysis/: CircleFitter.h  FakeManager.h  HitGeoPlotter.h  HitsManager.h  LinearFitter.h  MLTrackExtrapolatorReco.h  OutputManager.h  PlotHolder.h  SeedManager.h  TrackFitter.h  TrackGeoPlotter.h  TrackManager.h  TrackingMetricsTool.h
tracknnanalysis-master/TrackNNAnalysis/TrackNNAnalysis/atlasstyle/: AtlasLabels.h
tracknnanalysis-master/TrackNNAnalysis/data/ClassificationModelsITK/: Classification_MLP_ITK_ws3_v3.onnx  Classification_MLP_ITK_ws3_v4.onnx  Classification_MLP_class_ITK_ws3.onnx  DetectorClassifier_MLP_ws3.onnx
tracknnanalysis-master/TrackNNAnalysis/data/DetectorGeo/: DetectorGeo_ACTS_ODD.csv  convertGeoCSVRoot.cxx
tracknnanalysis-master/TrackNNAnalysis/data/ExtrapolationModels/: Extrap_ESN_ACTS_ws3_barrel_layerInfo.onnx  Extrap_MLP_64_64_32_ACTS_ws3_barrel_layerInfo.onnx  Extrap_MLP_64_64_ACTS_ws3_barrel_layerInfo.onnx  Extrap_MLP_ACTS_ws3_barrel_layerInfo.onnx  Extrap_MLP_ACTS_ws3_ec.onnx  Extrap_MLP_ACTS_ws3_ec_layerInfo.onnx  Extrap_MLP_ACTS_ws3_ec_layerInfo_retrained.onnx  Extrap_MLP_ITK_ws3.onnx  Extrap_RNN_ACTS_ws3_barrel_layerInfo.onnx  Extrap_biRNN_ACTS_ws3_barrel_layerInfo.onnx  Extrap_bigMLP_ACTS_ws3_barrel_layerInfo.onnx  Extrap_smallMLP_ACTS_ws3_barrel_layerInfo.onnx
tracknnanalysis-master/TrackNNAnalysis/data/ExtrapolationModelsITK/: Combined_ITK_ws3_v3.onnx  ExtrapMLP_ITK_ws3_v4.onnx  Extrap_MLP_ITK_ws3.onnx  Extrap_MLP_ITK_ws3_v3.onnx  Extrap_MLP_ITK_ws3_v4.onnx  Extrap_MLP_endcapOnly_ws3.onnx  Extrap_biRNN_ITK_ws3_barrel_layerInfo.onnx  extrap_barrelOnly_ws3_biRNN.onnx
tracknnanalysis-master/TrackNNAnalysis/data/ExtrapolationModels_v0/: Extrap_ESN_ACTS_ws3_barrel.onnx  Extrap_ESN_ACTS_ws3_barrel_layerInfo.onnx  Extrap_LSTM_windowSize3.onnx  Extrap_LSTM_windowSize5.onnx  Extrap_MLP_ACTS_ws3_barrel.onnx  Extrap_MLP_ACTS_ws3_barrel_layerInfo.onnx  Extrap_MLP_ACTS_ws3_barrel_layerInfo_penalizeRho.onnx  Extrap_MLP_windowSize3_local.onnx  Extrap_MLP_windowSize5_local.onnx  Extrap_RNN_ACTS_barrel.onnx  Extrap_RNN_ACTS_barrel_layerInfo.onnx  Extrap_RNN_ACTS_ws3_barrel.onnx  Extrap_RNN_ACTS_ws3_barrel_layerInfo.onnx  Extrap_RNN_ACTS_ws5_barrel.onnx  Extrap_RNN_ACTS_ws5_barrel_layerInfo.onnx  Extrap_RNN_windowSize3.onnx  Extrap_RNN_windowSize3_ACTS.onnx  Extrap_RNN_windowSize3_XOnly.onnx  Extrap_RNN_windowSize3_cosine.onnx  Extrap_RNN_windowSize3_local.onnx  Extrap_RNN_windowSize3_noMask.onnx  Extrap_RNN_windowSize3_penalizeZ.onnx  Extrap_RNN_windowSize5_local.onnx  Extrap_biRNN_ACTS_ws3_barrel.onnx  MLP_windowSize3.onnx  (+12 more)
tracknnanalysis-master/TrackNNAnalysis/python/: README.txt  runAll.sh
tracknnanalysis-master/TrackNNAnalysis/scripts/: plotDetectorGeometry.cxx
tracknnanalysis-master/TrackNNAnalysis/submission/: commonFunctions.py  jobListCircleFit.py  jobListEval.py  jobListExtrap.py  jobListPickle.py  jobListPredError.py  jobSubmission.py  submit.py
tracknnanalysis-master/TrackNNAnalysis/utils/: TODO.txt  evalExtrapTree.cxx  evalPredError.cxx  plotClassificationSummaryPlots.cxx  plotExtrapSummaryPlots.cxx  plotModelEffCompare.cxx  plotPileupEffCompare.cxx  plotROC.cxx  plotResiduals.cxx  plotTrack.cxx  prepareTrainingInputs_ATLASRDO.cxx  processForPickleITK.cxx  runMLExtrapolator.cxx
tracknnanalysis-master/TrackNNCommon/: CMakeLists.txt
tracknnanalysis-master/TrackNNCommon/TrackNNCommon/: CommonDefs.h
tracknnanalysis-master/TrackNNDataReader/: CMakeLists.txt
tracknnanalysis-master/TrackNNDataReader/Root/: DataReader.cxx  DataReaderACTS.cxx  DataReaderHTT.cxx  DataReaderITK.cxx
tracknnanalysis-master/TrackNNDataReader/TrackNNDataReader/: DataReader.h  DataReaderACTS.h  DataReaderHTT.h  DataReaderITK.h
tracknnanalysis-master/TrackNNEvaluator/: CMakeLists.txt
tracknnanalysis-master/TrackNNEvaluator/Root/: NNEvalClassUtils.cxx  NNEvalCombined.cxx  NNEvalExtrapUtils.cxx  NNEvalLwtnnUtils.cxx  NNEvalUtils.cxx  NNHitPredictor.cxx  OnnxRuntimeBase.cxx
tracknnanalysis-master/TrackNNEvaluator/TrackNNEvaluator/: NNEvalClassUtils.h  NNEvalCombined.h  NNEvalExtrapUtils.h  NNEvalLwtnnUtils.h  NNEvalUtils.h  NNHitPredictor.h  OnnxRuntimeBase.h
(+353 files in other folders)
